# mock

./: .cvsignore  .gitignore  .gitmodules  .packit.yaml  .pep8speaks.yml  .travis.yml  CONTRIBUTING.md  ChangeLog  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  autogen.sh  buildsys-build.spec  configure  configure.ac  create_default_route_in_container.sh  fedora-17-ppc.cfg  mock-yum  mock.py  mock.spec  mock.spec.in  pylintrc  pyproject.toml  release-instructions.txt  repo-from-json  setup.cfg  tox.ini
.gemini/: config.yaml  styleguide.md
.github/: chronographer.yml  issue_template.md  pull_request_template.md
.github/setup-copr-build/: copr-build-setup  copr-custom-script
.github/workflows/: Dockerfile  codeql-analysis.yml  copr-builds.yml  docker-build.yml  fedora-tox.yml  new-issues-to-board.yml  python-diff-lint.yml  shell-diff-lint.yml  towncrier.yml
.reuse/: dep5
.tito/: releasers.conf
.travis/: copr-build  copr-build-setup  copr-custom-script
behave/: README.md  environment.py  pylintrc  testlib.py
behave/features/: add-repo.feature  auto-download-of-srpm.feature  buildroot-image.feature  chroot-scan.feature  cmdline-errors.feature  dnf4.feature  dnf5.feature  environment.py  hermetic-build.feature  isolated-build.feature  library.feature  list-configs.feature  scrub-all-chroots.feature
behave/steps/: other.py
behave/testlib/: __init__.py  commands.py  mock.py
doc/: FAQ.md  Feature-bootstrap.md  Feature-container-for-bootstrap.md  Feature-external-deps.md  Feature-forcearch.md  Feature-modularity.md  Feature-nosync.md  Feature-package-managers.md  Feature-rhelchroots.md  Plugin-BindMount.md  Plugin-CCache.md  Plugin-ChrootScan.md  Plugin-CompressLogs.md  Plugin-Hooks.md  Plugin-HwInfo.md  Plugin-LvmRoot.md  Plugin-Mount.md  Plugin-Overlayfs.md  Plugin-PMRequest.md  Plugin-PackageState.md  Plugin-ProcEnv.md  Plugin-RootCache.md  Plugin-SELinux.md  Plugin-Scm.md  Plugin-Showrc.md  Plugin-Sign.md  Plugin-Tmpfs.md  Plugin-YumCache.md  Plugin-rpkg-preprocessor.md  README.md  Release-Notes-1.2.13.md  Release-Notes-1.2.14.md  Release-Notes-1.2.15.md  Release-Notes-1.2.16.md  Release-Notes-1.2.17.md  Release-Notes-1.2.18.md  Release-Notes-1.2.19.md  Release-Notes-1.2.20.md  Release-Notes-1.2.21.md  Release-Notes-1.3.2.md  (+38 more)
doc/mock/: .coverage
docs/: FAQ.md  Feature-bootstrap.md  Feature-buildroot-image.md  Feature-container-for-bootstrap.md  Feature-external-deps.md  Feature-modularity.md  Feature-nosync.md  Feature-package-managers.md  Feature-rhelchroots.md  Gemfile  Makefile  Mock-Core-Configs.md  Plugin-BindMount.md  Plugin-BuildrootLock.md  Plugin-CCache.md  Plugin-ChrootScan.md  Plugin-CompressLogs.md  Plugin-ExpandSpec.md  Plugin-Export-Buildroot-Image.md  Plugin-Hooks.md  Plugin-HwInfo.md  Plugin-LvmRoot.md  Plugin-MemoryAccounting.md  Plugin-Mount.md  Plugin-Overlayfs.md  Plugin-PMRequest.md  Plugin-PackageState.md  Plugin-ProcEnv.md  Plugin-RootCache.md  Plugin-Rpmautospec.md  Plugin-SBOM.md  Plugin-SELinux.md  Plugin-Scm.md  Plugin-Showrc.md  Plugin-Sign.md  Plugin-SystemMonitor.md  Plugin-Tmpfs.md  Plugin-Unbreq.md  Plugin-YumCache.md  Plugin-rpkg-preprocessor.md  (+90 more)
docs/_layouts/: default.html
docs/docs/: CONTRIBUTING.md  SUPPORT.md
docs/script/: cibuild
etc/: Makefile  defaults.cfg  fedora-1-i386-core.cfg  fedora-2-i386-core.cfg  fedora-3-i386-core.cfg  fedora-3-x86_64-core.cfg  fedora-4-i386-core.cfg  fedora-4-i386-epel.cfg  fedora-4-ppc-core.cfg  fedora-4-ppc-epel.cfg  fedora-4-x86_64-core.cfg  fedora-4-x86_64-epel.cfg  fedora-5-i386-core.cfg  fedora-5-i386-epel.cfg  fedora-5-ppc-core.cfg  fedora-5-ppc-epel.cfg  fedora-5-x86_64-core.cfg  fedora-5-x86_64-epel.cfg  fedora-6-i386-core.cfg  fedora-6-ppc-core.cfg  fedora-6-x86_64-core.cfg  fedora-7-i386.cfg  fedora-7-ppc.cfg  fedora-7-ppc64.cfg  fedora-7-x86_64.cfg  fedora-8-i386.cfg  fedora-8-ppc.cfg  fedora-8-ppc64.cfg  fedora-8-x86_64.cfg  fedora-devel-i386-core.cfg  fedora-devel-i386.cfg  fedora-devel-ppc-core.cfg  fedora-devel-ppc.cfg  fedora-devel-ppc64.cfg  fedora-devel-x86_64-core.cfg  fedora-devel-x86_64.cfg  fedora-development-i386-core.cfg  fedora-development-ppc-core.cfg  fedora-development-x86_64-core.cfg  logging.ini  (+3 more)
etc/bash_completion.d/: mock  mock.bash
etc/consolehelper/: mock
etc/legacy/: fedora-3-i386-core.cfg  fedora-5-i386-core.cfg  redhat-9-i386.cfg
etc/mock/: custom-0-aarch64.cfg  custom-0-armhfp.cfg  custom-0-i386.cfg  custom-0-ppc64.cfg  custom-0-ppc64le.cfg  custom-0-s390.cfg  custom-0-s390x.cfg  custom-0-x86_64.cfg  custom-1-aarch64.cfg  custom-1-armhfp.cfg  custom-1-i386.cfg  custom-1-ppc64.cfg  custom-1-ppc64le.cfg  custom-1-s390.cfg  custom-1-s390x.cfg  custom-1-x86_64.cfg  defaults.cfg  epel-4-i386.cfg  epel-4-ppc.cfg  epel-4-x86_64.cfg  epel-5-i386.cfg  epel-5-ppc.cfg  epel-5-x86_64.cfg  epel-6-i386.cfg  epel-6-ppc64.cfg  epel-6-x86_64.cfg  epel-7-aarch64.cfg  epel-7-ppc64.cfg  epel-7-ppc64le.cfg  (+184 more)
mock/: Makefile  README.md  create_default_route_in_container.sh  mock.conf  mock.spec  mockchain  precompile-bash-completion  pylintrc  requirements.txt  run-tests.sh
mock-core-configs/: README  README.md  mock-core-configs.spec  mock-core-configs.spec.rpmlintrc
py/: mock.py  mockchain.py
releng/: generate-release-notes  rawhide-branching.sh
scripts/: test-cfgs.py
src/: .cvsignore  Makefile  Makefile-ORIG  config.h  config.h.in  mock-helper.c  mock.c  mock.py  selinux-mock.c  util.py  version.h.in
tests/: 00-retcode.tst  001-orphanskill-explicit.tst  01-shell.tst  02-argpassing.tst  03-chroot-one-arg.tst  04-offline-tmpfs.tst  05-orphanskill-std.tst  06-orphanskill-explicit.tst  07-init-clean.tst  08-oldstyle-cmd.tst  09-mockchain-fail.tst  10-mockchain-partial.tst  12-mockchain-recurse.tst  13-copyin.tst  14-mock-multiple.tst  README.txt  build_name.tst  dropcache.py  functions  releasetests.sh  runconfigs.sh  runregressions.sh  runtests.sh  test-A-1.1-0.src.rpm  test-C-1.1-0.src.rpm  test1.tst  test2.tst  test3.tst  test4.tst  test5.tst  test6.tst  test7.tst  test8.tst  test9.tst  testenvironment  verify_repos.sh
(+1112 files in other folders)
